# filigree

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
shaders/: bounds.vert  cull.comp  debug.frag  debug.vert  hzb.comp  rasterize.comp  resolve.frag  resolve.vert  shader.frag  shader.vert  visbuffer.frag  visbuffer.vert
src/: Application.cpp  Application.hpp  main.cpp
src/core/: Engine.cpp  Engine.hpp  GPUMesh.hpp  GPUMeshUploader.cpp  GPUMeshUploader.hpp  InputController.cpp  InputController.hpp  VulkanContext.cpp  VulkanContext.hpp
src/geometry/: ClusterDAGBuilder.cpp  ClusterDAGBuilder.hpp  GPUMesh.hpp  GPUMeshUploader.cpp  GPUMeshUploader.hpp  MeshletBuilder.cpp  MeshletBuilder.hpp
src/renderer/: CullPipeline.cpp  CullPipeline.hpp  GpuTimestampPool.hpp  MeshletBuilder.cpp  MeshletBuilder.hpp  StandardPipeline.cpp  StandardPipeline.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
src/renderer/passes/: CullComputePass.cpp  CullComputePass.hpp  DebugOverlayPass.cpp  DebugOverlayPass.hpp  ForwardPass.cpp  ForwardPass.hpp  HzbDownsamplePass.cpp  HzbDownsamplePass.hpp  IRenderPass.hpp  ResolvePass.cpp  ResolvePass.hpp  VisBufferPass.cpp  VisBufferPass.hpp
src/renderer/pipelines/: BoundsPipeline.cpp  BoundsPipeline.hpp  CullPipeline.cpp  CullPipeline.hpp  DebugPipeline.cpp  DebugPipeline.hpp  HzbPipeline.cpp  HzbPipeline.hpp  ResolvePipeline.cpp  ResolvePipeline.hpp  StandardPipeline.cpp  StandardPipeline.hpp  VisBufferPipeline.cpp  VisBufferPipeline.hpp
src/scene/: CameraNode.cpp  CameraNode.hpp  MeshNode.cpp  MeshNode.hpp  Node.cpp  Node.hpp
src/ui/: DebugUI.cpp  DebugUI.hpp
